test_programs/compile_failure/trait_associated_items_clash/src/main.nr
pub trait Foo {
    let N: u32;

    fn N() {}
}

fn main() {}
